@@ -14,6 +14,16 @@ $port = 12345;
 
 my $server = PerlACE::TestTarget::create_target (1) || die "Create target 1 failed\n";
 
+# configuration not passed to the server by the command line but the server
+# will open it.
+my $svcconf = "multi_prot.conf";
+my $server_svcfile = $server->LocalFile ($svcconf);
+if ($server->PutFile ($svcconf) == -1) {
+    print STDERR "ERROR: cannot set file <$server_svcfile>\n";
+    exit 1;
+}
+
+
 $iiopSV = $server->CreateProcess ("server", "-ORBDottedDecimalAddresses 0 -ORBUseSharedProfile 1 -h default -p $port");
 
 print "Starting server using only IIOP\n";
